@@ -69,7 +69,7 @@ void test_empty_arrays()
 }
 
 
-void test_null_value()
+void test_array_null_value()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser containing_null("{NULL}");
@@ -100,67 +100,7 @@ void test_null_value()
 }
 
 
-void test_single_quoted_string()
-{
-  std::pair<pqxx::array_parser::juncture, std::string> output;
-  pqxx::array_parser parser("{'item'}");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::row_start,
-    "Array did not start with row_start.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::string_value,
-    "Array did not return string_value.");
-  PQXX_CHECK_EQUAL(output.second, "item", "Unexpected string value.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::row_end,
-    "Array did not end with row_end.");
-  PQXX_CHECK_EQUAL(output.second, "", "Unexpected nonempty output.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::done,
-    "Array did not conclude with done.");
-  PQXX_CHECK_EQUAL(output.second, "", "Unexpected nonempty output.");
-}
-
-
-void test_single_quoted_escaping()
-{
-  std::pair<pqxx::array_parser::juncture, std::string> output;
-  pqxx::array_parser parser("{'don''t\\\\ care'}");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::row_start,
-    "Array did not start with row_start.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::string_value,
-    "Array did not return string_value.");
-  PQXX_CHECK_EQUAL(output.second, "don't\\ care", "Unexpected string value.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::row_end,
-    "Array did not end with row_end.");
-  PQXX_CHECK_EQUAL(output.second, "", "Unexpected nonempty output.");
-
-  output = parser.get_next();
-  PQXX_CHECK_EQUAL(
-    output.first, pqxx::array_parser::juncture::done,
-    "Array did not conclude with done.");
-  PQXX_CHECK_EQUAL(output.second, "", "Unexpected nonempty output.");
-}
-
-
-void test_double_quoted_string()
+void test_array_double_quoted_string()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser parser("{\"item\"}");
@@ -190,7 +130,7 @@ void test_double_quoted_string()
 }
 
 
-void test_double_quoted_escaping()
+void test_array_double_quoted_escaping()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser parser(R"--({"don''t\\ care"})--");
@@ -221,7 +161,7 @@ void test_double_quoted_escaping()
 
 
 // A pair of double quotes in a double-quoted string is an escaped quote.
-void test_double_double_quoted_string()
+void test_array_double_double_quoted_string()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser parser{R"--({"3"" steel"})--"};
@@ -240,7 +180,7 @@ void test_double_double_quoted_string()
 }
 
 
-void test_unquoted_string()
+void test_array_unquoted_string()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser parser("{item}");
@@ -270,7 +210,7 @@ void test_unquoted_string()
 }
 
 
-void test_multiple_values()
+void test_array_multiple_values()
 {
   std::pair<pqxx::array_parser::juncture, std::string> output;
   pqxx::array_parser parser("{1,2}");
@@ -417,22 +357,6 @@ void test_nested_array_with_multiple_entries()
 }
 
 
-void test_array_parse()
-{
-  test_empty_arrays();
-  test_null_value();
-  test_single_quoted_string();
-  test_single_quoted_escaping();
-  test_double_quoted_string();
-  test_double_quoted_escaping();
-  test_double_double_quoted_string();
-  test_unquoted_string();
-  test_multiple_values();
-  test_nested_array();
-  test_nested_array_with_multiple_entries();
-}
-
-
 void test_generate_empty_array()
 {
   PQXX_CHECK_EQUAL(
@@ -542,7 +466,15 @@ void test_array_roundtrip()
 }
 
 
-PQXX_REGISTER_TEST(test_array_parse);
+PQXX_REGISTER_TEST(test_empty_arrays);
+PQXX_REGISTER_TEST(test_array_null_value);
+PQXX_REGISTER_TEST(test_array_double_quoted_string);
+PQXX_REGISTER_TEST(test_array_double_quoted_escaping);
+PQXX_REGISTER_TEST(test_array_double_double_quoted_string);
+PQXX_REGISTER_TEST(test_array_unquoted_string);
+PQXX_REGISTER_TEST(test_array_multiple_values);
+PQXX_REGISTER_TEST(test_nested_array);
+PQXX_REGISTER_TEST(test_nested_array_with_multiple_entries);
 PQXX_REGISTER_TEST(test_array_generate);
 PQXX_REGISTER_TEST(test_array_roundtrip);
 } // namespace
