@@ -3,6 +3,7 @@
  - Documentation tweak. (#584)
  - Typo in README.md. (#586)
  - Support `std::optional<std::string_view>` etc. in `stream_to`. (#596)
+ - Remove support for single-quoted array/composite elements.  No such thing!
 7.7.4
  - `transaction_base::for_each()` is now called `for_stream()`. (#580)
  - New `transaction_base::for_query()` is similar, but non-streaming. (#580)
